testsuite/tests/lexical_envs/envs_5/test.out
CompilationUnit[1:1-3:9]
|f_prelude:
|  AdaNodeList[1:1-1:1]: <empty list>
|f_body:
|  LibraryItem[1:1-3:9]
|  |f_has_private:
|  |  PrivateAbsent[1:1-1:1]
|  |f_item:
|  |  SubpBody[1:1-3:9]
|  |  |f_overriding:
|  |  |  OverridingUnspecified[1:1-1:1]
|  |  |f_subp_spec:
|  |  |  SubpSpec[1:1-1:14]
|  |  |  |f_subp_kind:
|  |  |  |  SubpKindProcedure[1:1-1:10]
|  |  |  |f_subp_name:
|  |  |  |  DefiningName[1:11-1:14]
|  |  |  |  |f_name:
|  |  |  |  |  DottedName[1:11-1:14]
|  |  |  |  |  |f_prefix:
|  |  |  |  |  |  Id[1:11-1:12]: A
|  |  |  |  |  |f_suffix:
|  |  |  |  |  |  Id[1:13-1:14]: B
|  |  |  |f_subp_params: <null>
|  |  |  |f_subp_returns: <null>
|  |  |f_aspects: <null>
|  |  |f_decls:
|  |  |  DeclarativePart[1:17-2:1]
|  |  |  |f_decls:
|  |  |  |  AdaNodeList[1:17-1:17]: <empty list>
|  |  |f_stmts:
|  |  |  HandledStmts[2:6-3:1]
|  |  |  |f_stmts:
|  |  |  |  StmtList[2:6-2:6]: <empty list>
|  |  |  |f_exceptions:
|  |  |  |  AdaNodeList[1:17-1:17]: <empty list>
|  |  |f_end_name:
|  |  |  EndName[3:5-3:8]
|  |  |  |f_name:
|  |  |  |  DottedName[3:5-3:8]
|  |  |  |  |f_prefix:
|  |  |  |  |  Id[3:5-3:6]: A
|  |  |  |  |f_suffix:
|  |  |  |  |  Id[3:7-3:8]: B
|f_pragmas:
|  PragmaNodeList[3:9-3:9]: <empty list>

==== Dumping lexical environments ====
$root = LexEnv(Static_Primary, Parent=null):
    standard: [<PackageDecl ["Standard"] in Standard>]

@2 = LexEnv(Static_Primary, Parent=@1, Node=<SubpBody ["A.B"] a-b.adb:1:1-3:9>):
  Referenced: <SubpBody ["A.B"] a-b.adb:1:1-3:9>: LexEnv(Static_Primary, Node=<CompilationUnit a-b.adb:1:1-3:9>)
  Referenced: <SubpBody ["A.B"] a-b.adb:1:1-3:9>: LexEnv(Static_Primary, Node=<CompilationUnit a-b.adb:1:1-3:9>)
    <empty>

@1 = LexEnv(Static_Primary, Parent=@3, Node=<PackageDecl ["A"] a.ads:1:1-3:7>):
    b: [<SubpBody ["A.B"] a-b.adb:1:1-3:9>]
    pouet: [<ObjectDecl ["Pouet"] a.ads:2:4-2:20>]

@3 = LexEnv(Static_Primary, Parent=$root, Node=<PackageDecl ["Standard"] in Standard>):
    "&": [<SyntheticSubpDecl [""&""] in Standard>, <SyntheticSubpDecl [""&""] in Standard>, <SyntheticSubpDecl [""&""] in Standard>, <SyntheticSubpDecl [""&""] in Standard>, <SyntheticSubpDecl [""&""] in Standard>, <SyntheticSubpDecl [""&""] in Standard>, <SyntheticSubpDecl [""&""] in Standard>, <SyntheticSubpDecl [""&""] in Standard>, <SyntheticSubpDecl [""&""] in Standard>, <SyntheticSubpDecl [""&""] in Standard>, <SyntheticSubpDecl [""&""] in Standard>, <SyntheticSubpDecl [""&""] in Standard>]
    "*": [<SyntheticSubpDecl [""*""] in Standard>, <SyntheticSubpDecl [""*""] in Standard>, <SyntheticSubpDecl [""*""] in Standard>, <SyntheticSubpDecl [""*""] in Standard>, <SyntheticSubpDecl [""*""] in Standard>, <SyntheticSubpDecl [""*""] in Standard>, <SyntheticSubpDecl [""*""] in Standard>, <SyntheticSubpDecl [""*""] in Standard>, <SyntheticSubpDecl [""*""] in Standard>, <SyntheticSubpDecl [""*""] in Standard>, <SyntheticSubpDecl [""*""] in Standard>, <SyntheticSubpDecl [""*""] in Standard>, <SyntheticSubpDecl [""*""] in Standard>, <SyntheticSubpDecl [""*""] in Standard>]
    "**": [<SyntheticSubpDecl [""**""] in Standard>, <SyntheticSubpDecl [""**""] in Standard>, <SyntheticSubpDecl [""**""] in Standard>, <SyntheticSubpDecl [""**""] in Standard>, <SyntheticSubpDecl [""**""] in Standard>, <SyntheticSubpDecl [""**""] in Standard>, <SyntheticSubpDecl [""**""] in Standard>, <SyntheticSubpDecl [""**""] in Standard>, <SyntheticSubpDecl [""**""] in Standard>, <SyntheticSubpDecl [""**""] in Standard>, <SyntheticSubpDecl [""**""] in Standard>]
    "+": [<SyntheticSubpDecl [""+""] in Standard>, <SyntheticSubpDecl [""+""] in Standard>, <SyntheticSubpDecl [""+""] in Standard>, <SyntheticSubpDecl [""+""] in Standard>, <SyntheticSubpDecl [""+""] in Standard>, <SyntheticSubpDecl [""+""] in Standard>, <SyntheticSubpDecl [""+""] in Standard>, <SyntheticSubpDecl [""+""] in Standard>, <SyntheticSubpDecl [""+""] in Standard>, <SyntheticSubpDecl [""+""] in Standard>, <SyntheticSubpDecl [""+""] in Standard>, <SyntheticSubpDecl [""+""] in Standard>, <SyntheticSubpDecl [""+""] in Standard>, <SyntheticSubpDecl [""+""] in Standard>, <SyntheticSubpDecl [""+""] in Standard>, <SyntheticSubpDecl [""+""] in Standard>, <SyntheticSubpDecl [""+""] in Standard>, <SyntheticSubpDecl [""+""] in Standard>, <SyntheticSubpDecl [""+""] in Standard>, <SyntheticSubpDecl [""+""] in Standard>, <SyntheticSubpDecl [""+""] in Standard>, <SyntheticSubpDecl [""+""] in Standard>]
    "-": [<SyntheticSubpDecl [""-""] in Standard>, <SyntheticSubpDecl [""-""] in Standard>, <SyntheticSubpDecl [""-""] in Standard>, <SyntheticSubpDecl [""-""] in Standard>, <SyntheticSubpDecl [""-""] in Standard>, <SyntheticSubpDecl [""-""] in Standard>, <SyntheticSubpDecl [""-""] in Standard>, <SyntheticSubpDecl [""-""] in Standard>, <SyntheticSubpDecl [""-""] in Standard>, <SyntheticSubpDecl [""-""] in Standard>, <SyntheticSubpDecl [""-""] in Standard>, <SyntheticSubpDecl [""-""] in Standard>, <SyntheticSubpDecl [""-""] in Standard>, <SyntheticSubpDecl [""-""] in Standard>, <SyntheticSubpDecl [""-""] in Standard>, <SyntheticSubpDecl [""-""] in Standard>, <SyntheticSubpDecl [""-""] in Standard>, <SyntheticSubpDecl [""-""] in Standard>, <SyntheticSubpDecl [""-""] in Standard>, <SyntheticSubpDecl [""-""] in Standard>, <SyntheticSubpDecl [""-""] in Standard>, <SyntheticSubpDecl [""-""] in Standard>]
    "/": [<SyntheticSubpDecl [""/""] in Standard>, <SyntheticSubpDecl [""/""] in Standard>, <SyntheticSubpDecl [""/""] in Standard>, <SyntheticSubpDecl [""/""] in Standard>, <SyntheticSubpDecl [""/""] in Standard>, <SyntheticSubpDecl [""/""] in Standard>, <SyntheticSubpDecl [""/""] in Standard>, <SyntheticSubpDecl [""/""] in Standard>, <SyntheticSubpDecl [""/""] in Standard>, <SyntheticSubpDecl [""/""] in Standard>, <SyntheticSubpDecl [""/""] in Standard>, <SyntheticSubpDecl [""/""] in Standard>, <SyntheticSubpDecl [""/""] in Standard>]
    "/=": [<SyntheticSubpDecl [""/=""] in Standard>, <SyntheticSubpDecl [""/=""] in Standard>, <SyntheticSubpDecl [""/=""] in Standard>, <SyntheticSubpDecl [""/=""] in Standard>, <SyntheticSubpDecl [""/=""] in Standard>, <SyntheticSubpDecl [""/=""] in Standard>, <SyntheticSubpDecl [""/=""] in Standard>, <SyntheticSubpDecl [""/=""] in Standard>, <SyntheticSubpDecl [""/=""] in Standard>, <SyntheticSubpDecl [""/=""] in Standard>, <SyntheticSubpDecl [""/=""] in Standard>, <SyntheticSubpDecl [""/=""] in Standard>, <SyntheticSubpDecl [""/=""] in Standard>, <SyntheticSubpDecl [""/=""] in Standard>, <SyntheticSubpDecl [""/=""] in Standard>, <SyntheticSubpDecl [""/=""] in Standard>, <SyntheticSubpDecl [""/=""] in Standard>, <SyntheticSubpDecl [""/=""] in Standard>]
    "<": [<SyntheticSubpDecl [""<""] in Standard>, <SyntheticSubpDecl [""<""] in Standard>, <SyntheticSubpDecl [""<""] in Standard>, <SyntheticSubpDecl [""<""] in Standard>, <SyntheticSubpDecl [""<""] in Standard>, <SyntheticSubpDecl [""<""] in Standard>, <SyntheticSubpDecl [""<""] in Standard>, <SyntheticSubpDecl [""<""] in Standard>, <SyntheticSubpDecl [""<""] in Standard>, <SyntheticSubpDecl [""<""] in Standard>, <SyntheticSubpDecl [""<""] in Standard>, <SyntheticSubpDecl [""<""] in Standard>, <SyntheticSubpDecl [""<""] in Standard>, <SyntheticSubpDecl [""<""] in Standard>, <SyntheticSubpDecl [""<""] in Standard>, <SyntheticSubpDecl [""<""] in Standard>, <SyntheticSubpDecl [""<""] in Standard>, <SyntheticSubpDecl [""<""] in Standard>]
    "<=": [<SyntheticSubpDecl [""<=""] in Standard>, <SyntheticSubpDecl [""<=""] in Standard>, <SyntheticSubpDecl [""<=""] in Standard>, <SyntheticSubpDecl [""<=""] in Standard>, <SyntheticSubpDecl [""<=""] in Standard>, <SyntheticSubpDecl [""<=""] in Standard>, <SyntheticSubpDecl [""<=""] in Standard>, <SyntheticSubpDecl [""<=""] in Standard>, <SyntheticSubpDecl [""<=""] in Standard>, <SyntheticSubpDecl [""<=""] in Standard>, <SyntheticSubpDecl [""<=""] in Standard>, <SyntheticSubpDecl [""<=""] in Standard>, <SyntheticSubpDecl [""<=""] in Standard>, <SyntheticSubpDecl [""<=""] in Standard>, <SyntheticSubpDecl [""<=""] in Standard>, <SyntheticSubpDecl [""<=""] in Standard>, <SyntheticSubpDecl [""<=""] in Standard>, <SyntheticSubpDecl [""<=""] in Standard>]
    "=": [<SyntheticSubpDecl [""=""] in Standard>, <SyntheticSubpDecl [""=""] in Standard>, <SyntheticSubpDecl [""=""] in Standard>, <SyntheticSubpDecl [""=""] in Standard>, <SyntheticSubpDecl [""=""] in Standard>, <SyntheticSubpDecl [""=""] in Standard>, <SyntheticSubpDecl [""=""] in Standard>, <SyntheticSubpDecl [""=""] in Standard>, <SyntheticSubpDecl [""=""] in Standard>, <SyntheticSubpDecl [""=""] in Standard>, <SyntheticSubpDecl [""=""] in Standard>, <SyntheticSubpDecl [""=""] in Standard>, <SyntheticSubpDecl [""=""] in Standard>, <SyntheticSubpDecl [""=""] in Standard>, <SyntheticSubpDecl [""=""] in Standard>, <SyntheticSubpDecl [""=""] in Standard>, <SyntheticSubpDecl [""=""] in Standard>, <SyntheticSubpDecl [""=""] in Standard>]
    ">": [<SyntheticSubpDecl ["">""] in Standard>, <SyntheticSubpDecl ["">""] in Standard>, <SyntheticSubpDecl ["">""] in Standard>, <SyntheticSubpDecl ["">""] in Standard>, <SyntheticSubpDecl ["">""] in Standard>, <SyntheticSubpDecl ["">""] in Standard>, <SyntheticSubpDecl ["">""] in Standard>, <SyntheticSubpDecl ["">""] in Standard>, <SyntheticSubpDecl ["">""] in Standard>, <SyntheticSubpDecl ["">""] in Standard>, <SyntheticSubpDecl ["">""] in Standard>, <SyntheticSubpDecl ["">""] in Standard>, <SyntheticSubpDecl ["">""] in Standard>, <SyntheticSubpDecl ["">""] in Standard>, <SyntheticSubpDecl ["">""] in Standard>, <SyntheticSubpDecl ["">""] in Standard>, <SyntheticSubpDecl ["">""] in Standard>, <SyntheticSubpDecl ["">""] in Standard>]
    ">=": [<SyntheticSubpDecl ["">=""] in Standard>, <SyntheticSubpDecl ["">=""] in Standard>, <SyntheticSubpDecl ["">=""] in Standard>, <SyntheticSubpDecl ["">=""] in Standard>, <SyntheticSubpDecl ["">=""] in Standard>, <SyntheticSubpDecl ["">=""] in Standard>, <SyntheticSubpDecl ["">=""] in Standard>, <SyntheticSubpDecl ["">=""] in Standard>, <SyntheticSubpDecl ["">=""] in Standard>, <SyntheticSubpDecl ["">=""] in Standard>, <SyntheticSubpDecl ["">=""] in Standard>, <SyntheticSubpDecl ["">=""] in Standard>, <SyntheticSubpDecl ["">=""] in Standard>, <SyntheticSubpDecl ["">=""] in Standard>, <SyntheticSubpDecl ["">=""] in Standard>, <SyntheticSubpDecl ["">=""] in Standard>, <SyntheticSubpDecl ["">=""] in Standard>, <SyntheticSubpDecl ["">=""] in Standard>]
    "abs": [<SyntheticSubpDecl [""abs""] in Standard>, <SyntheticSubpDecl [""abs""] in Standard>, <SyntheticSubpDecl [""abs""] in Standard>, <SyntheticSubpDecl [""abs""] in Standard>, <SyntheticSubpDecl [""abs""] in Standard>, <SyntheticSubpDecl [""abs""] in Standard>, <SyntheticSubpDecl [""abs""] in Standard>, <SyntheticSubpDecl [""abs""] in Standard>, <SyntheticSubpDecl [""abs""] in Standard>, <SyntheticSubpDecl [""abs""] in Standard>, <SyntheticSubpDecl [""abs""] in Standard>]
    "and": [<SyntheticSubpDecl [""and""] in Standard>, <SyntheticSubpDecl [""and""] in Standard>, <SyntheticSubpDecl [""and""] in Standard>, <SyntheticSubpDecl [""and""] in Standard>]
    "mod": [<SyntheticSubpDecl [""mod""] in Standard>, <SyntheticSubpDecl [""mod""] in Standard>, <SyntheticSubpDecl [""mod""] in Standard>, <SyntheticSubpDecl [""mod""] in Standard>, <SyntheticSubpDecl [""mod""] in Standard>, <SyntheticSubpDecl [""mod""] in Standard>]
    "not": [<SyntheticSubpDecl [""not""] in Standard>, <SyntheticSubpDecl [""not""] in Standard>, <SyntheticSubpDecl [""not""] in Standard>, <SyntheticSubpDecl [""not""] in Standard>]
    "or": [<SyntheticSubpDecl [""or""] in Standard>, <SyntheticSubpDecl [""or""] in Standard>, <SyntheticSubpDecl [""or""] in Standard>, <SyntheticSubpDecl [""or""] in Standard>]
    "rem": [<SyntheticSubpDecl [""rem""] in Standard>, <SyntheticSubpDecl [""rem""] in Standard>, <SyntheticSubpDecl [""rem""] in Standard>, <SyntheticSubpDecl [""rem""] in Standard>, <SyntheticSubpDecl [""rem""] in Standard>, <SyntheticSubpDecl [""rem""] in Standard>]
    "xor": [<SyntheticSubpDecl [""xor""] in Standard>, <SyntheticSubpDecl [""xor""] in Standard>, <SyntheticSubpDecl [""xor""] in Standard>, <SyntheticSubpDecl [""xor""] in Standard>]
    'A': [<EnumLiteralDecl ["'A'"] in Standard>, <EnumLiteralDecl ["'A'"] in Standard>, <EnumLiteralDecl ["'A'"] in Standard>]
    a: [<PackageDecl ["A"] a.ads:1:1-3:7>]
    abort_signal_: [<ExceptionDecl ["Abort_Signal_"] in Standard>]
    ascii: [<PackageDecl ["ASCII"] in Standard>]
    boolean: [<ConcreteTypeDecl ["Boolean"] in Standard>]
    character: [<ConcreteTypeDecl ["Character"] in Standard>]
    constraint_error: [<ExceptionDecl ["Constraint_Error"] in Standard>]
    duration: [<ConcreteTypeDecl ["Duration"] in Standard>]
    false: [<EnumLiteralDecl ["False"] in Standard>]
    float: [<ConcreteTypeDecl ["Float"] in Standard>]
    integer: [<ConcreteTypeDecl ["Integer"] in Standard>]
    long_float: [<ConcreteTypeDecl ["Long_Float"] in Standard>]
    long_integer: [<ConcreteTypeDecl ["Long_Integer"] in Standard>]
    long_long_float: [<ConcreteTypeDecl ["Long_Long_Float"] in Standard>]
    long_long_integer: [<ConcreteTypeDecl ["Long_Long_Integer"] in Standard>]
    long_long_long_integer: [<ConcreteTypeDecl ["Long_Long_Long_Integer"] in Standard>]
    natural: [<SubtypeDecl ["Natural"] in Standard>]
    numeric_error: [<ExceptionDecl ["Numeric_Error"] in Standard>]
    positive: [<SubtypeDecl ["Positive"] in Standard>]
    program_error: [<ExceptionDecl ["Program_Error"] in Standard>]
    root_types_: [<PackageDecl ["root_types_"] in Standard>]
    short_float: [<ConcreteTypeDecl ["Short_Float"] in Standard>]
    short_integer: [<ConcreteTypeDecl ["Short_Integer"] in Standard>]
    short_short_integer: [<ConcreteTypeDecl ["Short_Short_Integer"] in Standard>]
    storage_error: [<ExceptionDecl ["Storage_Error"] in Standard>]
    string: [<ConcreteTypeDecl ["String"] in Standard>]
    tasking_error: [<ExceptionDecl ["Tasking_Error"] in Standard>]
    true: [<EnumLiteralDecl ["True"] in Standard>]
    universal_fixed_type_: [<ConcreteTypeDecl ["Universal_Fixed_Type_"] in Standard>]
    universal_int_type_: [<ConcreteTypeDecl ["Universal_Int_Type_"] in Standard>]
    universal_real_type_: [<ConcreteTypeDecl ["Universal_Real_Type_"] in Standard>]
    wide_character: [<ConcreteTypeDecl ["Wide_Character"] in Standard>]
    wide_string: [<ConcreteTypeDecl ["Wide_String"] in Standard>]
    wide_wide_character: [<ConcreteTypeDecl ["Wide_Wide_Character"] in Standard>]
    wide_wide_string: [<ConcreteTypeDecl ["Wide_Wide_String"] in Standard>]

$root = LexEnv(Static_Primary, Parent=null):
    standard: [<PackageDecl ["Standard"] in Standard>]

